objects/tffa__AssetInsurance__c.object
<CustomObject>
    <description>Captures the insurance details of the asset. Covers the insurance policy details, insurance agency details, and renewal frequency.</description>
    <fields>
        <fullName>tffa__AgencyCode__c</fullName>
        <description>Code of the insurance agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AgencyName__c</fullName>
        <description>Name of the insurance agency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AgentEmail__c</fullName>
        <description>Insurance agent email address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance agent email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AgentName__c</fullName>
        <description>Name of the insurance agent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance agent name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AgentPhone__c</fullName>
        <description>Phone number of the insurance agent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance agent phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <description>Reference to parent asset object</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <description>End date of the insurance policy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InsuredValue__c</fullName>
        <description>Valuation of the asset as per insurance agency</description>
        <label>Insured value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PolicyName__c</fullName>
        <description>Name of the insurance policy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PolicyNumber__c</fullName>
        <description>Number of the insurance policy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RevisionDate__c</fullName>
        <description>Revision date of the insurance policy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <description>Start date of the insurance policy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <label>Asset Insurance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>